Add header saying learning_zig is still up to date
Rename GPA to DebugAllocator

--- a/src/_includes/learning_zig.liquid
+++ b/src/_includes/learning_zig.liquid
@@ -48,7 +48,8 @@ li a {padding: 5px; display: inline-block;}
 p {margin: 16px 0;line-height: 32px;}
 section {margin-top: 50px;border-top: 1px solid #ccc;}
 aside {font-size: 18px;padding: 10px 10px;margin: 0 0 30px;border: solid #ffc0e6;border-width: 2px 0;line-height: 26px;}
-
+#uptodate { margin-top: 10px; }
+#uptodate p{ margin: 0px 0; line-height: 22px }
 h1, h2, h3 {outline: 0;margin: 30px 0 5px;}
 h1 {font-size: 28px;}
 h2 {font-size: 24px;}
